# burger-quiz-v2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bquiz/: __main__.py  app.py  btn.py  data.py  gui.py  gui2.py  i2c_lib.py  lcddriver.py  led.py  mock.py  relay.py  types.py
bquiz/game/: addition.py  engine.py  match.py  menus.py  nuggets.py  question.py  selpoivre.py  toss.py
bquiz/gui/: addition.py  base.py  menus.py  nuggets.py  question.py  selpoivre.py  toss.py
bquiz/hardware/: __init__.py  btn.py  lcd.py  led.py  relay.py
bquiz/resources/: addition.yaml  menus-rouge.yaml  menus.yaml  nuggets.yaml  selpoivre.yaml
kicad/board/: board.kicad_prl  board.kicad_pro  board.kicad_sch
kicad/pcb/: pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch
sketchup/: bquiz.skp
systemd/user/: bquiz.service
